--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ repositories {
 	mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
+    }
+}
+
 dependencies {
     //for spring boot jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -28,6 +34,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.40'
     //for swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    //for feign client
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     //for mysql database
     runtimeOnly 'com.mysql:mysql-connector-j'
     //for testing
