--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/travel_planner
 spring.datasource.username=root
 spring.datasource.password=Rittik@95174
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# account management service URLs
+account.management.service.base_url = http://localhost:8081/
+account.management.service.url = api/
+account.management.service.skip = false
